--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,4 +1,3 @@
 ---
 'message': 'This message came from the common hiera datasource.'
-'nginx':
-  'package_name': 'foo'
+'nginx::package_name': 'foo'
